Tested html with w3c validator and repaired all errors accordingly

--- a/index.html
+++ b/index.html
@@ -107,58 +107,66 @@
             <!--Why Infinity Container-->
             <div class="container-fluid text-center">
                 <h3 class="about-header">Why Infinity?</h3>
+                <p class="text-muted">Click the icons below to learn more!</p>
                 <div class="row">
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
-                            <i class="fas fa-brain d-sm-block" data-aos="zoom-in"
+                             <i class="fas fa-brain d-sm-block" data-toggle="collapse" data-target="#mind" data-aos="zoom-in"
                             data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100"></i>
-                            <h4 class="about-header">Mind</h4>
-                            <p class="display-4 about-content">Yoga increases healthy brain function &amp;
+                            <h4 class="about-header" data-aos="zoom-in"
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">Mind</h4>
+                            <p id="mind" class="collapse display-6 about-content">Yoga increases healthy brain function &amp;
                                 mental
                                 clarity</p>
                         </div>
                     </div>
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
-                            <i class="fas fa-fire-alt d-sm-block" data-aos="zoom-in"
+                            <i class="fas fa-fire-alt d-sm-block" data-toggle="collapse" data-target="#body" data-aos="zoom-in"
                             data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100" ></i>
-                            <h4 class="about-header">Body</h4>
-                            <p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
+                            <h4 class="about-header" data-aos="zoom-in"
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">Body</h4>
+                            <p id="body" class="collapse display-6 about-content">Burn calories during our Vinyasa Flow class</p>
                         </div>
                     </div>
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
-                            <i class="fas fa-praying-hands d-sm-block" data-aos="zoom-in"
-                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom"  data-aos-delay="100"></i>
-                            <h4 class="about-header">Spirit</h4>
-                            <p class="display-4 about-content">Find your inner strength through meditation.</p>
+                            <i class="fas fa-praying-hands d-sm-block" data-toggle="collapse" data-target="#spirit" data-aos="zoom-in"
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">
+                           </i>
+                           <h4 class="about-header" data-aos="zoom-in"
+                           data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">Spirit</h4>
+                            <p id="spirit" class="collapse display-6 about-content">Find your inner strength through meditation.</p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
-                            <i class="fas fa-peace d-sm-block" data-aos="zoom-in"
+                            <i class="fas fa-peace d-sm-block" data-toggle="collapse" data-target="#peace" data-aos="zoom-in"
                             data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100"></i>
-                            <h4 class="about-header">Peace</h4>
-                            <p class="display-4 about-content">Forget all the stress and focus on you.
+                            <h4 class="about-header" data-aos="zoom-in"
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">Peace</h4>
+                            <p id="peace" class="collapse display-6 about-content">Forget all the stress and focus on you.
                             </p>
                         </div>
                     </div>
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
-                            <i class="fas fa-heart d-sm-block" data-aos="zoom-in"
-                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100"></i>
-                            <h4 class="about-header">Love</h4>
-                            <p class="display-4 about-content">Inhale love, exhale all the negative stuff.</p>
+                            <i class="fas fa-heart d-sm-block" data-toggle="collapse" data-target="#love" data-aos="zoom-in"
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">  </i>
+                            <h4 class="about-header" data-aos="zoom-in"
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">Love</h4>
+                            <p id="love" class="collapse display-6 about-content">Inhale love, exhale all the negative stuff.</p>
                         </div>
                     </div>
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
-                            <i class="fas fa-yin-yang d-sm-block" data-aos="zoom-in"
+                            <i class="fas fa-yin-yang d-sm-block"  data-toggle="collapse" data-target="#harmony" data-aos="zoom-in"
                             data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100"></i>
-                            <h4 class="about-header">Harmony </h4>
-                            <p class="display-4 about-content">Bring harmony &amp; balance into your life.</p>
+                            <h4 class="about-header" data-aos="zoom-in"
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">Harmony </h4>
+                            <p id="harmony" class="collapse display-6 about-content">Bring harmony &amp; balance into your life.</p>
                         </div>
                     </div>
                     <!--./why-infinity-container-->
@@ -182,7 +190,7 @@
                     <p class="schedule-content">We hope to see you soon!</p>
                 </div>
             </div>
-            <div class="row row-cols-1 row-cols-lg-1">
+            <div class="row text-center">
                 <!--Card Deck-->
                 <div class="card-deck">
                     <div class="col xs-8 col-sm-4">
@@ -491,7 +499,7 @@
                                                                 aria-label="Close">
                                                                 <span aria-hidden="true">&times;</span>
                                                             </button>
-                                                            <!--./close-button--->
+                                                            <!--./close-button-->
                                                         </form>
                                                     </section>
                                                 </div>
@@ -519,14 +527,19 @@
             <!--Contact Details-->
             <div class="col-xs-8 col-sm-4">
                 <!--Address-->
-                <p><a href="https://goo.gl/maps/GCsGgcjKv2tg6coHA" target="_blank"><i
-                            class="fas fa-map-marker-alt" data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100"></i></a><span class="contact"> New York, New York</span></p>
+                <p><a href="https://goo.gl/maps/GCsGgcjKv2tg6coHA" target="_blank">
+                    <i class="fas fa-map-marker-alt"
+                            data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom"
+                            data-aos-delay="100"></i></a><span class="contact"> New York, New York</span></p>
                 <!--Phone number-->
-                <p><a href="https://www.google.com/gmail/about/" target="_blank"><i class="fas fa-phone" data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100"></i></a><span
-                        class="contact"> 212.000.0000</span></p>
+                <p><a href="https://www.google.com/gmail/about/" target="_blank">
+                    <i class="fas fa-phone"
+                            data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom"
+                            data-aos-delay="100"></i></a><span class="contact"> 212.000.0000</span></p>
                 <!--Email-->
-                <p><a href="https://voice.google.com/about" target="_blank"><i
-                            class="fas fa-envelope-open" data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100"></i></a><span class="contact"> owner@infinty.nyc</span></p>
+                <p><a href="https://voice.google.com/about" target="_blank"><i class="fas fa-envelope-open"
+                            data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom"
+                            data-aos-delay="100"></i></a><span class="contact"> owner@infinty.nyc</span></p>
             </div>
             <!--./contact-details-->
             <!--Contact Form-->
@@ -543,11 +556,11 @@
                         rows="3"></textarea>
                     <br>
                     <button class="btn btn-info float-right" type="submit">Send</button>
-                </div>
             </form>
         </div>
         <!--./contact-form-->
     </div>
+</div>
 </section>
 <!--./contact-->
 
@@ -642,7 +655,7 @@
         <div class="row text-center align-items-center">
             <div class="col-12">
             <a href="#myPage" title="To Top">
-                <i class="fas fa-chevron-up"></i>
+                <i class="fas fa-chevron-up" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"></i>
             </a>
         </div>
     </div>
