--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light bg-shadow fixed-top">
         <a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
+        <a href="#schedule" class="btn-sm"><button class="header__bookbutton">Book <br>now</button></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
