Updated animations to repair modal error

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!--./jumbotron-overlay-->
     <div class="jumbotron-fluid">
         <div class="container" data-aos="fade-up"
-        data-aos-anchor-placement="center-bottom" data-aos-duration="1000" data-aos-delay="300">
+        data-aos-anchor-placement="center-bottom" data-aos-duration="1000" data-aos-delay="200">
             <div class="row">
                 <div class="col-12">
                     <h1 class="display-3">Infinity</h1>
@@ -196,8 +196,7 @@
                 <div class="card-deck">
                     <div class="col xs-8 col-sm-4">
                         <!--First Card-->
-                        <div class="card h-100" data-aos="fade-up"
-                        data-aos-anchor-placement="center-bottom" data-aos-duration="800">
+                        <div class="card h-100">
                             <div class="mx-auto">
                                 <img src="assets/images/vinyasa.jpg" alt="people taking vinyasa flow class at infinity"
                                     class="card-img-top">
@@ -303,8 +302,7 @@
                     </div>
                     <!--Second Card-->
                     <div class="col xs-8 col-sm-4">
-                        <div class="card h-100" data-aos="fade-up"
-                        data-aos-anchor-placement="center-bottom" data-aos-duration="800">
+                        <div class="card h-100">
                             <div class="mx-auto">
                                 <img src="assets/images/restorative.jpg" alt="women using blocks during restorative yoga"
                                     class="card-img-top">
@@ -403,8 +401,7 @@
                     </div>
                     <!--Third Card-->
                     <div class="col xs-8 col-sm-4">
-                        <div class="card h-100" data-aos="fade-up"
-                        data-aos-anchor-placement="center-bottom" data-aos-duration="800">
+                        <div class="card h-100">
                             <div class="mx-auto">
                                 <img src="assets/images/chakracleansing.jpg"
                                     alt="people meditating during infinity chakra-cleansing class" class="card-img-top">
@@ -519,6 +516,7 @@
     <!--./schedule-section-->
 </div>
 <!--./schedule-container-->
+
 <!--Contact Section-->
 <section id="contact">
     <div class="container-fluid">
@@ -572,16 +570,18 @@
         <section id="quotes" class="quotes">
             <div class="row text-center">
                 <div class="col-12 section-header">
-                    <h2 class="section-header">Quotes</h2>
+                    <h2 class="section-header" data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom" data-aos-duration="300">Quotes</h2>
                     <hr>
-                    <p>Want to know what our members have to say about Infinity? Check out these quotes!</p>
+                    <p data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom" data-aos-duration="300">Want to know what our members have to say about Infinity? Check out these quotes!</p>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-xs-8 col-sm-4">
                     <!--First Card-->
                     <div class="card quote-card h-100" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom" data-aos-duration="800">
+                    data-aos-anchor-placement="center-bottom" data-aos-duration="300">
                         <div class="card-top top-color"></div>
                         <div class="avatar mx-auto white">
                             <img src="assets/images/quotes1.png" alt="closeup of female doing yoga" class="rounded-circle img-fluid">
@@ -602,7 +602,7 @@
                 <div class="col-xs-8 col-sm-4">
                     <!--Second Card-->
                     <div class="card quote-card h-100" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom" data-aos-duration="800">
+                    data-aos-anchor-placement="center-bottom" data-aos-duration="300">
                         <div class="card-top top-color"></div>
                         <div class="avatar mx-auto white">
                             <img src="assets/images/quotes3.png" alt="closeup of young man at infinity" class="rounded-circle img-fluid">
@@ -623,7 +623,7 @@
                 <div class="col-xs-8 col-sm-4">
                     <!--Third Card-->
                     <div class="card quote-card h-100" data-aos="fade-up"
-                        data-aos-anchor-placement="center-bottom" data-aos-duration="800">
+                        data-aos-anchor-placement="center-bottom" data-aos-duration="300">
                         <div class="card-top top-color"></div>
                         <div class="avatar mx-auto white">
                             <img src="assets/images/quotes2.png" alt="headshot of happy female infinity member" class="rounded-circle img-fluid">
