Added branding, navigation & social media links to footer

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light bg-shadow fixed-top">
         <a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
-        <a href="#schedule" class="btn-sm"><button class="header__bookbutton">Book <br>now</button></a>
+        <a href="#schedule" class="btn-sm"><button class="cta_button">Sign Up</button></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
@@ -656,34 +656,60 @@
         <div class="row text-center align-items-center">
             <div class="col-12">
             <a href="#myPage" title="To Top">
-                <i class="fas fa-chevron-up" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"></i>
+                <i class="fas fa-chevron-up"></i>
             </a>
         </div>
     </div>
-     <!--Social Media Links-->
-     <ul class="nav navbar-right ml-auto">
+ </div>
+
+ <div class="container">
+    <div class="row text-center align-items-center">
+        <div class="col-12">
+           <p> <i class="fas fa-infinity"></i>
+            <a class="navbar-brand" style="margin-top: 10px;">Infinity</a>
+           </p>
+        <p>
+            Peace love and <mark>Infinity</mark> since 2001.
+        </p>
+    </div>
+    </div>
+    
+    <hr class="footer-divider">
+    
+    <div class="row text-center">
+        <p><a class="footer-nav" href="#about">About</a></p>
+        <p><a class="footer-nav" href="#schedule">Schedule</a></p>
+        <p><a class="footer-nav" href="#contact">Contact</a></p>
+        <p><a class="footer-nav" href="#quotes">  Quotes</a></p>
+</div>
+
+    <!--Socials-->
+<div class="row">
+    <div class="col-12">
+    <ul class="nav navbar-right">
         <li class="nav-item">
-            <a class="nav-link waves-effect waves-light" href="https://www.twitter.com" target="_blank">
-                <i class="fab fa-twitter-square"></i>
+            <a class="footer-socials" href="https://www.twitter.com" target="_blank">
+                <i class="fab fa-twitter-square" id="twitter"></i>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link waves-effect waves-light" href="https://www.facebook.com" target="_blank">
-                <i class="fab fa-facebook-square"></i>
+            <a class="footer-socials" href="https://www.facebook.com" target="_blank">
+                <i class="fab fa-facebook-square" id="facebook"></i>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link waves-effect waves-light" href="https://www.instagram.com" target="_blank">
-                <i class="fab fa-instagram-square"></i>
+            <a class="footer-socials" href="https://www.instagram.com" target="_blank">
+                <i class="fab fa-instagram-square" id="instagram"></i>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link waves-effect waves-light" href="https://www.pinterest.com" target="_blank">
-                <i class="fab fa-pinterest"></i>
+            <a class="footer-socials" href="https://www.pinterest.com" target="_blank">
+                <i class="fab fa-pinterest" id="pinterest"></i>
             </a>
         </li>
     </ul>
-    <h6>2020 Alissa Troiano | Code Institute Project</h6>
+    </div>
+</div>
 </div>
 </footer>
 <!--./footer-->
